# cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUALITY.md  README.fr.md  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: README.md
pippo_transcript/: __init__.py  cli.py  core.py  gui.py  kostenrahmen.py  langs.py
tests/: test_core.py
