[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pippo-transcript"
version = "0.1.0"
description = "CLI pour transcrire des PDF et images en Markdown, JSON, TXT et images de pages."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pippo Transcript Contributors"},
]
keywords = ["pdf", "ocr", "transcription", "markdown", "json", "images"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
    "Topic :: Text Processing",
]
dependencies = [
    "Pillow>=10",
    "PyMuPDF>=1.24",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
vision = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "rapidfuzz>=3.6",
]
dev = [
    "pytest>=8",
]

[project.scripts]
pippo-transcript = "pippo_transcript.cli:main"
pippo-transcript-gui = "pippo_transcript.gui:main"
pippo-transcript-langs = "pippo_transcript.langs:main"

[tool.setuptools.packages.find]
include = ["pippo_transcript*"]
